fix: search component overflow on small screens

--- a/src/features/header/components/styles/explore-header.module.scss
+++ b/src/features/header/components/styles/explore-header.module.scss
@@ -10,5 +10,9 @@
 
   @include mq("small") {
     grid-template-columns: 1fr auto;
+
+    .back {
+      display: none;
+    }
   }
 }
